# mantis

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  Makefile.deprecated  README.md  bitvector.h  coloreddbg.cc  coloreddbg.h  common_types.h  kmer.h  query.cc  query.res  util.h  validatemantis.cc
cqf/: gqf.c  gqf.h
data/: SRR191403-k20-Cut1.squeakr  SRR191403_exact.ser  SRR191411-k20-Cut1.squeakr  SRR191411_exact.ser  shuffled_10k_paired.for-recomb
experiments/: assembled_ecoli_80.lst  ecoliDNA_80.lst  humanRNA_40k.accessions  humanRNA_40k.squeakrs  humanRNA_80.lst
include/: BooPHF.h  CdBG_Merger.h  ColorEncoder.h  DeltaManager.h  MSF.h  MantisFS.h  ProgOpts.h  adjList.h  bitvector.h  build_eq_graph.cc  canonKmer.h  canonicalKmer.h  canonicalKmerIterator.h  cdBG_merger.h  clipp.h  colorEncoder.h  coloreddbg.h  combine_canonicalKmer.hpp  combine_kmer.h  common_types.h  compressedSetBit.h  cqf.h  cqfMerger.h  deltaManager.h  gqf_cpp.h  hashutil.h  kmer.h  lrucache.hpp  lsmt.h  mHUtigBuilder.h  mantisSski.h  mantis_utils.hpp  mantisconfig.hpp  minimizerRandomOrder.h  monochromatic_component_iterator.h  mst.h  mstMerger.h  mstPlanner.h  mstQuery.h  squeakrconfig.h  (+4 more)
include/concurrentlru/: concurrent-lru-cache.h  concurrent-scalable-cache.h  lru-cache-key.h
include/cqf/: gqf.h
include/gqf/: gqf.h  gqf_int.h  hashutil.h
include/lru/internal/: base-cache.hpp
raw/: experiment_cutoffs.lst  incqfs.lst  input_txns.fa  input_txns.lst
raw/in1/: dbg_cqf.ser  sampleid.lst
raw/in2/: 0_eqclass_rrr.cls  dbg_cqf.ser  sampleid.lst
scripts/: install_mantis_server.sh  libpaths.sh  limitMem.sh  load_deps_spack.sh  patch_makefile.sh
src/: CMakeLists.txt  ColorEncoder.cc  MSF.cc  MSF.cpp  MST.cpp  MST_boost.cc  MantisFS.cc  adjList.cc  bitvector.cc  boom.cc  build_eq_graph.cc  canonKmer.cc  canonicalKmer.cc  cdBG_merger.cc  client.py  colorClusteringTester.cc  colorEncoder.cc  coloreddbg.cc  coloreddbgMerge.cc  compareCompressions.cc  compressedSetBit.cc  cqfMerger.cc  dbgccmst.cc  deleteme_tester.cpp  eqclsFrequencyStat.cc  estimateNumOfKmers.cc  hashutil.cc  hierarchicalMantisConstructor.cc  kmer.cc  listKmer.cc  lsmt.cc  mHUtigBuilder.cc  mantis.cc  mantisSski.cc  merge.cc  monochromatic_component_iterator.cc  mst.cc  mstMerger.cc  mstQuery.cc  newColorDSTester.cc  (+20 more)
src/cqf/: gqf.c
src/gqf/: gqf.c  gqf_file.c  hashutil.c
